- added SVN properties. - removed .cvsignore (not needed anymore) - fixed file tags
git-svn-id: svn://svn.qnetp.net/smartirc/SmartIrc4net/trunk@77 90edd973-07db-0310-a660-9c5aa9508ff8

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,14 +1,15 @@
 /**
  * $Id$
- * $Revision: 1.1 $
+ * $Rev$
  * $Author$
  * $Date$
  */
 
-v0.0.1
+v0.2.0
 -------
 fixes:
 
 changes:
 
 new:
+ - first public release
