- added alot of RFC commands to Rfc2812 and IrcCommands   (Oper, Motd, Luser, Version, Stats, Service, Squit) - added missing overloads for RFC commands   (Join, Part, Kick, List, Names) - fixed channel sync bug, when the connection is re-established   (Closes sf.net bug #1043536) - ReplyCode.LUser* renamed to ReplyCode.Luser* (.NET library standards) - added check for "~" userflag on nameslist (thanks to Giacomo Di Ciocco) - renamed IrcConnection.Version to IrcConnection.VersionNumber,   (it conflicted with IrcCommands.Version()) - added log calls for queue, when data could not be sent and is requeued
git-svn-id: svn://svn.qnetp.net/smartirc/SmartIrc4net/trunk@101 90edd973-07db-0310-a660-9c5aa9508ff8

--- a/TODO
+++ b/TODO
@@ -6,6 +6,9 @@
  * $Date$
  */
 
+- alle RFC befehle in Rfc klasse implmentieren
+- connection timeout detection (socket basis?)
+- DCC chat, file send/receive
 - Change strings[] IrcUser.JoinedChannels to Channel[]
 - Exception handling for Connection()
 - Documentation
