- prefixed all IrcCommands that are actually plain RFC commands with "Rfc"   e.g. Join() is now called RfcJoin() - renamed ChannelSync to ActiveChannelSync   later I will introduce PassiveChannelSync, this means only the received   data is used for channel sync no extra commands are send to the IRC server. - fixed \001 strings (action/ctcp stuff) - added timeout values for the tcp socket (6 minutes), and activated nodelay flag - added "Test" project to the SmartIrc4net monodevelop solution file
git-svn-id: svn://svn.qnetp.net/smartirc/SmartIrc4net/trunk@105 90edd973-07db-0310-a660-9c5aa9508ff8

--- a/TODO
+++ b/TODO
@@ -6,14 +6,12 @@
  * $Date$
  */
 
-- alle RFC befehle in Rfc klasse implmentieren
-- connection timeout detection (socket basis?)
+- passive channel sync
 - DCC chat, file send/receive
 - Change strings[] IrcUser.JoinedChannels to Channel[]
-- Exception handling for Connection()
 - Documentation
 - Timeout detection
 - Use async sockets
-- Create OnChannelSynced event
-- Exception Error Handling
+- Exception Error Handling (argument checking)
 - Create Debian Package
+X connection timeout detection (socket based?)
