--- a/TODO
+++ b/TODO
@@ -6,6 +6,11 @@
  * $Date$
  */
 
+- ipv6 support?
+- add IrcConnection.HostAddress (which IP is used for the client)
+- add OnErrorMessage event for ERR_* replycodes
+- add OnSocketTimeout event
+- Disconnect(quitmessage)
 - DCC chat, file send/receive
 - add server properties to IrcConnection (required for smart mode changes etc)
 - Documentation
