- copyright notice update
git-svn-id: svn://svn.qnetp.net/smartirc/SmartIrc4net/trunk@141 90edd973-07db-0310-a660-9c5aa9508ff8

--- a/README
+++ b/README
@@ -12,7 +12,7 @@ What is this?
 SmartIrc4net is a C# class for communication with IRC networks, which
 conforms to the RFC 2812 (IRC Protocol).
 It's orignally a port of SmartIRC (written in PHP),
-but it's much more now (I will backport it to PHP some day).
+but it's much more now (I will backport it to PHP5 some day).
 SmartIrc4net an API that handles all IRC protocol messages and is designed for
 creating IRC bots or even GUI clients.
 
