- added SendReply(), easy way of replying to a message (regardless if its a channel, query or notice message) - added Halfop() and Dehalfop() command to IrcCommands - added locking variable of SupportNonRfc to avoid possible bugs in channel sync - added OnErrorMessage event as general hook for all RPL_ messages - fixed some code for non-RFC support
git-svn-id: svn://svn.qnetp.net/smartirc/SmartIrc4net/trunk@143 90edd973-07db-0310-a660-9c5aa9508ff8

--- a/TODO
+++ b/TODO
@@ -6,9 +6,10 @@
  * $Date$
  */
 
+X halfop commands in IrcCommands
 - ipv6 support?
 - add IrcConnection.HostAddress (which IP is used for the client)
-- add OnErrorMessage event for ERR_* replycodes
+X add OnErrorMessage event for ERR_* replycodes
 - add OnSocketTimeout event
 - Disconnect(quitmessage)
 - DCC chat, file send/receive
