- updated TODO list. - added IrcClient.AutoRelogin setting. - improved handling of rejoining channels after reconnect. - added event OnConnectionError to IrcConnection. - changed overrides to new (method hiding is sufficient here). - added IrcConnection.AutoRetryDelay setting. - using keep-alive socket now. - fixed OnConnected event, it's now called when the connection is ready for sending data. - fixed Reconnect() handling in the Listen() loop, moved to ReadLine().
git-svn-id: svn://svn.qnetp.net/smartirc/SmartIrc4net/trunk@165 90edd973-07db-0310-a660-9c5aa9508ff8

--- a/TODO
+++ b/TODO
@@ -6,19 +6,25 @@
  * $Date$
  */
 
+- write PingThread which pings every 60 sec the server and waits 300 seconds before it triggers IsConnectionError
 - Documentation
 - passive channel sync
+- add nicklist parameter for Login()
+- AutoRejoin
+- AutoJoinOnInvite
+- AutoNickChange
 - clean message parser, channel is not always right set (need to check for replycode!)
+- DCC chat, file send/receive
 X halfop commands in IrcCommands
 - ipv6 support?
 - add IrcConnection.HostAddress (which IP is used for the client)
 X add OnErrorMessage event for ERR_* replycodes
 - add OnSocketTimeout event
 - Disconnect(quitmessage)
-- DCC chat, file send/receive
 - add server properties to IrcConnection (required for smart mode changes etc)
 - Exception Error Handling (argument checking)
 - Create Debian Package
 X connection timeout detection (socket based?)
 - Change string[] IrcUser.JoinedChannels to Channel[]?
 - Use async sockets?
+- server properties
