- added IrcClient.OnAway with AwayEventArgs, IrcClient.OnUnAway and IrcClient.OnNowAway event. - added CtcpEventHandler and CtctpEventArgs, they are now nicely parsed.
git-svn-id: svn://svn.qnetp.net/smartirc/SmartIrc4net/trunk@194 90edd973-07db-0310-a660-9c5aa9508ff8

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,12 @@
  * $Date$
  */
 
+v0.4.0 (SVN rX)
+------
+fixes:
+- fixed null reference exception when CTCP PING contains no data
+  (thanks to Nick 'Zaf' Clifford, closes sf.net patch #1199630)
+
 v0.3.5 (SVN r184)
 ------
 fixes:
