--- a/TODO
+++ b/TODO
@@ -6,6 +6,7 @@
  * $Date$
  */
 
+- IrcClient.AutoAwaySync, query every minute WHO of joined channels to keep away synced
 - Reconnect() / StoreRejoinChannels() should remember channel keys too!
 - add IrcNetwork property, which is guessed by default or passed with Connect()
 - Documentation
