- bumped debian changelog to 0.4.5 - added /list commad to Test.
git-svn-id: svn://svn.qnetp.net/smartirc/SmartIrc4net/trunk@283 90edd973-07db-0310-a660-9c5aa9508ff8

--- a/TODO
+++ b/TODO
@@ -6,6 +6,7 @@
  * $Date$
  */
 
+08:09:48 <AirHead> btw, I forgot to mention, but the channel modes +q and +a are for Owner (~) and Admin (&) respectively.
 - IrcClient.AutoAwaySync, query every minute WHO of joined channels to keep away synced
 - Reconnect() / StoreRejoinChannels() should remember channel keys too!
 - add IrcNetwork property, which is guessed by default or passed with Connect()
